--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -2,25 +2,25 @@
 <div class="container">
   <div class="grid">
     <div class="footer-address">
-      <h5>Наши офисы</h5><a class="footer-link" href="#">г.Полтава, ул. А.Кукоби, 12</a><a class="footer-link" href="#">г.Миргород, ул.Победы,10, оф.1</a><a class="footer-link" href="#">Время работы: 9:00 – 18:00</a>
+      <h5 class="footer-address__title">Наши офисы</h5><a class="footer-link" href="#">г.Полтава, ул. А.Кукоби, 12</a><a class="footer-link" href="#">г.Миргород, ул.Победы,10, оф.1</a><a class="footer-link" href="#">Время работы: 9:00 – 18:00</a>
     </div>
     <div class="footer-logo"><a class="link" href="#"> 
-        <svg> 
+        <svg data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
           <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
         </svg></a></div>
     <div class="footer-contacts">
-      <h5>Наши офисы</h5><a class="footer-link" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-83</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-82</a>
+      <h5 class="footer-contacts__title">Наши офисы</h5><a class="footer-link" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-83</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-82</a>
     </div>
     <div class="footer-newsletter">
-      <form class="newsletter-form" action=""></form>
-      <h5 class="newsletter-form__headline">Будьте в курсе спецпредложений </h5>
-      <div class="newsletter-form__text">
-        <label class="newsletter-form__title" for="newsletter">Ваш e-mail
-          <input class="newsletter-form__field" id="newsletter" type="text"/>
-        </label>
-        <button class="btn newsletter-form__btn">Хочу быть в курсе!</button>
-      </div>
-    </div><a class="arrow-btn footer-btn" href="#about">
+      <!--FORM START-->
+      <form class="footer-newsletter__form" action="">
+        <h5 class="footer-newsletter__headline">Будьте в курсе спецпредложений   </h5>
+        <label class="footer-newsletter__title" for="newsletter">Ваш e-mail</label>
+        <input class="footer-newsletter__field" id="newsletter" type="text"/>
+        <button class="btn footer-newsletter__btn">Хочу быть в курсе!</button>
+      </form>
+      <!--FORM END          -->
+    </div><a class="arrow-btn footer-btn" href="#header">
       <div class="arrow-btn__icon">
         <svg class="icon">
           <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
@@ -28,7 +28,7 @@
       </div>
       <p class="arrow-btn__text">Вверх</p></a>
     <div class="footer-backcall">
-      <p>Мы предоставляем бесплатные консультации!</p><a class="btn">Закажите звонок!</a>
+      <p class="footer-backcall__title">Мы предоставляем бесплатные консультации!</p><a class="btn">Закажите звонок!</a>
     </div>
     <div class="footer-social">
       <h6 class="footer-social__title">МЫ В СОЦСЕТЯХ</h6>
