--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -13,8 +13,8 @@ html(lang="en")
         //HEADER START 
         header#header.header 
             .header-content
-                h1.header-content__title Современное <br> жилье в Полтаве и <br> Миргороде
-                p.header-content__text Новые квартиры от застройщика в престижном <br> районе Полтавы и Миргорода
+                h1(data-aos="fade-left").header-content__title Современное <br> жилье в Полтаве и <br> Миргороде
+                p(data-aos="fade-right").header-content__text Новые квартиры от застройщика в престижном <br> районе Полтавы и Миргорода
 
                 a.arrow-btn(href="#about")
                     .arrow-btn__icon
