--- a/app/scss/layout/_typography.scss
+++ b/app/scss/layout/_typography.scss
@@ -35,9 +35,18 @@ a {
     background: #FFF3A6;
     font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
     transition: all .3s;
+    border-radius: 2px;
+    text-transform: inherit;
     &:hover {
         background: #514947;
         color: #FFFFFF;
+    }
+    @media (max-width: 1366px) {
+        font-size: 1.1rem;
+        width: 180px;
+    }
+    @media (max-width: 576px) {
+        width: 220px;
     }
 }
 
@@ -102,10 +111,38 @@ a {
     }
     &--left {
         .arrow-btn__icon {
+            &__text {
+                @media (max-width: 576px) {
+                    font-size: 16px;
+                    line-height: 20px;
+                    //letter-spacing: 0.001em;
+                }
+            }
             .icon {
                 top: -20px;
                 left: 33px;
                 transform: rotate(-180deg);
+                @media (max-width: 576px) {
+                    top: -10px;
+                    left: 18px;
+                }
+            }
+        }
+    }
+    @media (max-width: 576px) {
+        height: 40px;
+        &__text {
+            padding-left: 55px;
+        }
+        &__icon {
+            svg {
+                @include size(8px, 16px);
+                top: -9px;
+                left: 17px;
+            }
+            &:after {
+                @include size(40px);
+                top: -22px;
             }
         }
     }
@@ -120,6 +157,16 @@ a {
     grid-column: 1 / 13;
     margin: 0 0 80px 2px;
     text-transform: uppercase;
+    @media (max-width: 1366px) {
+        margin: 0 0 50px 2px;
+        font-size: 19px;
+        line-height: 24px;
+    }
+    @media (max-width: 576px) {
+        font-size: 16px;
+        line-height: 20px;
+        margin: 0 0 30px 2px;
+    }
 }
 
 .title {
@@ -127,9 +174,24 @@ a {
     margin-bottom: 80px;
     text-transform: uppercase;
     letter-spacing: 0.05em;
+    @media (max-width: 1366px) {
+        font-size: 52px;
+        margin-bottom: 10px;
+    }
+    @media (max-width: 576px) {
+        font-size: 36px;
+        line-height: 44px;
+        margin-bottom: 10px;
+    }
 }
 
 section {
+    overflow: hidden;
     padding: 100px 0 100px 0;
     background: linear-gradient(90deg, rgba(0, 0, 0, .2), hsla(0, 0%, 100%, 0) 50%), linear-gradient(270deg, rgba(0, 0, 0, .2), hsla(0, 0%, 70%, 0) 47.55%);
+    @media (max-width: 576px) {
+        padding: 30px 0;
+    }
 }
+
+//slick
