--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -2,13 +2,17 @@
     padding: 100px 0 50px 0;
     background: linear-gradient(90deg, rgba(0, 0, 0, .2), hsla(0, 0%, 100%, 0) 50%), linear-gradient(270deg, rgba(0, 0, 0, .2), hsla(0, 0%, 70%, 0) 47.55%);
     color: #0D0D0D;
+    overflow: hidden;
+    @media (max-width: 576px) {
+        padding: 30px 0 50px 0;
+    }
     &-link {
         color: #0D0D0D;
         font-size: 1.1rem;
         line-height: 1.75rem;
     }
     &-address {
-        grid-column: 3 / 6;
+        grid-column: 2 / 6;
         grid-row: 1 / 2;
         display: flex;
         flex-direction: column;
@@ -16,6 +20,22 @@
         text-align: right;
         justify-content: flex-start;
         padding: 1.5rem 0 0 0;
+        &__title {
+            text-transform: uppercase;
+        }
+        @media (max-width: 576px) {
+            grid-column: 1 / 13;
+            grid-row: 1 / 2;
+            text-align: center;
+            font-size: 16px;
+            line-height: 20px;
+            margin: 0 0 10px 0;
+            &__title {
+                font-size: 19px;
+                line-height: 23px;
+                margin: 0 0 10px 0;
+            }
+        }
     }
     &-logo {
         grid-column: 6 / 8;
@@ -25,19 +45,35 @@
             width: 100%;
             fill: #423C3A;
         }
+        @media (max-width: 576px) {
+            display: none;
+        }
     }
     &-contacts {
-        grid-column: 8 / 11;
+        grid-column: 8 / 12;
         grid-row: 1 / 2;
         display: flex;
         flex-direction: column;
         align-content: flex-start;
         justify-content: flex-start;
         padding: 1.5rem 0 0 0;
-    }
-    &-newsletter {
-        grid-column: 1 / 6;
-        grid-row: 2 / 3;
+        &__title {
+            text-transform: uppercase;
+        }
+        @media (max-width: 576px) {
+            grid-column: 1 / 13;
+            grid-row: 2 / 3;
+            text-align: center;
+            margin-bottom: 30px;
+            font-size: 16px;
+            line-height: 20px;
+            padding: 0;
+            &__title {
+                font-size: 19px;
+                line-height: 23px;
+                margin: 0 0 10px 0;
+            }
+        }
     }
     &-btn {
         grid-column: 6 / 8;
@@ -65,16 +101,34 @@
             color: #423C3A;
             padding: 130px 0 0 5px;
         }
+        @media (max-width: 576px) {
+            display: none;
+        }
     }
     &-backcall {
         grid-column: 8 / 11;
         grid-row: 2 / 3;
         font-size: 18px;
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        &__title {
+            font-size: 1rem;
+        }
         .btn {
             display: block;
             text-align: center;
             line-height: 4rem;
+        }
+        @media (max-width: 576px) {
+            grid-column: 1 / 13;
+            grid-row: 3 / 4;
+            margin: 0 0 40px 0;
+            &__title {
+                font-size: 19px;
+                line-height: 23px;
+            }
         }
     }
     &-social {
@@ -84,6 +138,9 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        &__title {
+            font-size: 1rem;
+        }
         &__icons {
             display: flex;
             justify-content: space-between;
@@ -101,18 +158,52 @@
             fill: #423C3A;
             transition: all .3s;
         }
+        @media (max-width: 1366px) {
+            &__icons {
+                padding: 0 1rem 1rem;
+            }
+            svg {
+                @include size(35px);
+            }
+        }
+        @media (max-width: 576px) {
+            grid-column: 3 / 10;
+            grid-row: 4 / 5;
+            &__title {
+                font-size: 24px;
+                line-height: 29px;
+            }
+        }
     }
     &-copyright {
         grid-column: 1 / 13;
         grid-row: 3 / 4;
         justify-self: center;
         margin: 100px 0 0 0;
+        @media (max-width: 576px) {
+            grid-column: 1 / 13;
+            grid-row: 6 / 7;
+            margin: 50px 0 0 0;
+        }
     }
-    .newsletter-form {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 100%;
+    .footer-newsletter {
+        grid-column: 1 / 6;
+        grid-row: 2 / 3;
+        @media (max-width: 576px) {
+            grid-column: 1 / 13;
+            grid-row: 5 / 6;
+            margin-top: 30px;
+        }
+        &__form {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100%;
+            @media (max-width: 576px) {
+                display: flex;
+                flex-direction: column;
+            }
+        }
         &__text {
             padding: 1rem 0 0 0;
             display: flex;
@@ -120,32 +211,51 @@
         }
         &__headline {
             text-transform: uppercase;
-            font-size: 1.25rem;
+            font-size: 24px;
+            line-height: 29px;
+            @media (max-width: 576px) {
+                margin: 0 0 30px 0;
+                text-align: center;
+            }
         }
         &__title {
             font-size: 1.1rem;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            flex-grow: 2;
         }
         &__field {
             font-size: 1.1rem;
             background: transparent;
-            border-bottom: 1px solid #4F4F4F;
-            margin-top: .5rem;
+            margin: .5rem .5rem 0 0;
             padding: .1rem .5rem;
-            color: #4F4F4F;
-            width: 230px;
+            line-height: 1.2rem;
+            border-bottom: 1px solid #828282;
+            padding: .1rem .5rem;
+            color: #828282;
+            @media (max-width: 576px) {
+                margin: 0 0 30px 0;
+                padding: .5rem .5rem;
+            }
         }
         &__btn {
-            //margin: 0 0 0 1rem;
+            margin: 0 0 0 1rem;
             width: 250px;
             height: 4rem;
+            @media (max-width: 576px) {
+                font-size: 16px;
+                line-height: 20px;
+                margin: 0 auto;
+            }
         }
-        .text-wrap {
-            display: flex;
-            justify-content: space-between;
-            padding: 1rem 0;
-        }
+        // @media (max-width: 1366px) {
+        //     &__headline {
+        //         font-size: 1.1rem;
+        //     }
+        //     &__title {
+        //         font-size: .9rem;
+        //     }
+        // }
     }
 }
