--- a/app/scss/modules/_section-apartments.scss
+++ b/app/scss/modules/_section-apartments.scss
@@ -4,18 +4,22 @@
     .container {
         height: 100%;
         position: relative;
+        overflow: hidden;
     }
     .headline {
         line-height: 37px;
     }
     &-head {
         grid-column: 1/7;
+        @media (max-width: 576px) {
+            grid-column: 1/13;
+        }
     }
     .arrow-btn {
-        // grid-column: 1/7;
-        // grid-row: 2/3;
-        // align-self: flex-end;
         @include pos($b: 50px, $l: 0);
+        @media (max-width: 576px) {
+            @include pos($b: 50px, $l: 20px);
+        }
     }
     &-slider {
         display: flex;
@@ -27,21 +31,38 @@
             z-index: 2;
             fill: #FFF3A6;
             transform: translateX(50%) rotate(180deg);
+            @media (max-width: 576px) {
+                top: 65%;
+                right: 13px;
+            }
         }
         &__prevbtn {
             @include pos($r: 51%, $t: 50%);
             z-index: 2;
             fill: #FFF3A6;
+            @media (max-width: 576px) {
+                top: 65%;
+                left: 8px;
+            }
         }
         &__wrap {
-            @include pos($t: 100px, $l: 50%);
+            @include pos($t: 100px, $l: 49.4%);
             width: 50vw;
+            @media (max-width: 576px) {
+                @include pos($t: 250px, $l: 20px);
+                width: calc(100% - 40px);
+            }
         }
     }
     &-tile {
         height: 920px;
+        @media (max-width: 576px) {
+            height: unset;
+        }
         margin: 0 .25rem;
-        background: linear-gradient(270deg, rgba(66, 60, 58, 0.33) -20.49%, #423C3A -20.49%, rgba(255, 255, 255, 0) 18.52%), linear-gradient(90deg, rgba(66, 60, 58, 0.33) -12.06%, rgba(255, 255, 255, 0) 25.73%), $page-darken-bg;
+        background: linear-gradient(270deg, rgba(66, 60, 58, 0.33) -20.49%, #423C3A -20.49%, rgba(255, 255, 255, 0) 18.52%),
+        linear-gradient(90deg, rgba(66, 60, 58, 0.33) -12.06%, rgba(255, 255, 255, 0) 25.73%),
+        $page-darken-bg;
         text-align: center;
         color: $tw;
         display: flex;
@@ -59,12 +80,20 @@
             height: 370px;
             overflow: hidden;
             img {
-                height: 120%;
-                object-fit: cover;
+                min-height: 100%;
+                width: 100%;
+                @media (max-width: 576px) {
+                    min-height: calc(100% - 30px);
+                    width: calc(100% - 30px);
+                    margin: 15px;
+                }
             }
         }
         &__icon {
             margin: 50px 0;
+            @media (max-width: 576px) {
+                margin: 15px 0;
+            }
             svg {
                 @include size(85px);
             }
@@ -73,7 +102,7 @@
             fill: transparent;
         }
         &__title {
-            margin-bottom: 75px;
+            margin-bottom: 35px;
             font-size: 30px;
             line-height: 44px;
             text-align: center;
@@ -86,19 +115,29 @@
             line-height: 29px;
             text-align: center;
             padding: 0 .25rem;
+            display: block;
+        }
+        @media (max-width: 1366px) {
+            &__name {
+                font-size: 24px;
+            }
+            &__title {
+                font-size: 24px;
+            }
+            &__link {
+                font-size: 16px;
+            }
         }
     }
     //SLIDER BUTTON
     .slick-arrow.slick-prev {
         // display: none !important;
     }
-    .slick-next {
-        top: calc( 50% - 52.5px);
-        transform: rotate(180deg);
-        right: -90px;
-    }
     .slick-arrow {
         @include size(65px, 105px);
+        @media (max-width: 576px) {
+            @include size(13px, 24px);
+        }
         font-size: 50px;
         //background: url(/images/icons/arrow.svg) 60% no-repeat;
         cursor: pointer;
