--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -16,23 +16,45 @@
         text-transform: uppercase;
         text-align: center;
         margin-bottom: 80px;
+        @media (max-width: 576px) {
+            font-size: 24px;
+            line-height: 29px;
+        }
     }
     &__title {
         display: flex;
         flex-direction: column;
         text-transform: uppercase;
         font-size: 1.25rem;
+        @media (max-width: 576px) {
+            font-weight: normal;
+            font-size: 16px;
+            line-height: 20px;
+            margin: 15px 0;
+        }
         &:nth-child(2) {
             grid-column: 1 / 5;
             grid-row: 2 / 3;
+            @media (max-width: 576px) {
+                grid-column: 1 / 13;
+                grid-row: 2 / 3;
+            }
         }
         &:nth-child(3) {
             grid-column: 5 / 9;
             grid-row: 2 / 3;
+            @media (max-width: 576px) {
+                grid-column: 1 / 13;
+                grid-row: 3 / 4;
+            }
         }
         &:nth-child(4) {
             grid-column: 9 / 13;
             grid-row: 2 / 3;
+            @media (max-width: 576px) {
+                grid-column: 1 / 13;
+                grid-row: 4 / 5;
+            }
         }
     }
     &__field {
@@ -47,6 +69,11 @@
     &__checkbox {
         grid-column: 2 / 7;
         grid-row: 3 / 4;
+        @media (max-width: 576px) {
+            grid-column: 1 / 13;
+            grid-row: 5 / 6;
+            margin-top: 50px;
+        }
         display: flex;
         align-items: center;
         line-height: 1.2rem;
@@ -61,13 +88,23 @@
         }
     }
     &__text {
-        text-align: center;
+        word-wrap: break-word;
+        .contact-form__title {
+            margin: 0;
+        }
     }
     &__btn {
         grid-column: 9 / 12;
         grid-row: 3 / 4;
+        @media (max-width: 576px) {
+            grid-column: 1 / 13;
+            grid-row: 6 / 7;
+            justify-self: center;
+            margin-top: 40px;
+        }
         height: 4rem;
         align-self: flex-end;
+        text-transform: uppercase;
     }
     // .submit {
     //     font-size: 1.25rem;
