--- a/app/scss/modules/_section-objects.scss
+++ b/app/scss/modules/_section-objects.scss
@@ -10,45 +10,76 @@
     .headline {
         line-height: 37px;
         border-color: #FFFFFF;
+        grid-column: 1/7;
+        grid-row: 1/2;
+        @media (max-width: 576px) {
+            grid-column: 1/13;
+        }
+    }
+    .title {
+        grid-column: 1/7;
+        grid-row: 2/3;
+        @media (max-width: 576px) {
+            grid-column: 1/13;
+        }
     }
     &-slider {
         margin: 0 -15px;
     }
     &-tile {
-        display: flex !important; //hack for Slick Slider
-        justify-content: space-between;
         margin: 0 15px;
-    }
-    &-tile__info {
-        display: flex;
-        flex-direction: column;
-        width: 47%;
-        margin: 0 1rem 0 0;
+        display: grid !important; //hack for Slick Slider
+        @media (max-width: 576px) {}
     }
     &-tile__headline {
         color: $link-default;
         font-size: 36px;
         line-height: 44px;
         margin: 0 0 45px 0;
+        grid-column: 1/7;
+        grid-row: 3/4;
+        @media (max-width: 576px) {
+            grid-column: 1/13;
+            grid-row: 3/4;
+            text-align: center;
+        }
     }
     &-tile__text {
         font-weight: 300;
         font-size: 1.3;
         line-height: 30px;
         margin: 0 0 50px 0;
+        grid-column: 1/7;
+        grid-row: 4/5;
+        @media (max-width: 576px) {
+            grid-column: 1/13;
+            grid-row: 5/6;
+            margin: 30px 0 50px 0;
+        }
     }
     &-tile__links {
         //font-size: 1rem;
         .arrow-btn:first-child {
             margin: 0 0 30px 0;
         }
+        grid-column: 1/7;
+        grid-row: 5/6;
+        @media (max-width: 576px) {
+            grid-column: 1/13;
+            grid-row: 6/7;
+        }
     }
     &-tile__illustration {
-        width: 47%;
         background: $page-darken-bg;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        grid-column: 7/13;
+        grid-row: 1/6;
+        @media (max-width: 576px) {
+            grid-column: 1/13;
+            grid-row: 4/5;
+        }
     }
     &-tile__img {
         width: 100%;
@@ -56,21 +87,31 @@
     }
     &-tile__icons {
         display: flex;
-        padding: 1rem 1rem 1rem 1rem;
-        height: 30%;
+        padding: 1rem 1rem 2rem 1rem;
+        //height: 30%;
     }
     &-tile__icon {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-around;
+        justify-content: space-between;
         font-size: 19px;
-        padding: 1rem;
+        padding: 1rem 0;
         width: 33%;
         text-align: center;
+        &-text {
+            line-height: 2rem;
+            @media (max-width: 576px) {
+                font-size: .9rem;
+                line-height: 20px;
+            }
+        }
         svg {
             @include size(95px);
             fill: transparent;
+            @media (max-width: 576px) {
+                @include size(40px);
+            }
         }
     }
     //SLICK SLIDER START
@@ -78,7 +119,7 @@
         @include pos($t: 50%, $r: -100px);
         top: calc(50% - 52px);
         transform: rotate(180deg);
-        z-index: 3;
+        z-index: 2;
     }
     .slick-arrow.slick-prev {
         display: none !important;
