header mobile fix

--- a/app/layout/section-objects.html
+++ b/app/layout/section-objects.html
@@ -5,11 +5,17 @@
     <use xlink:href="images/main-page_icons-sprite.svg#arrow"> </use>
   </svg>
   <!--SLIDER BUTTON END -->
+  <div class="objects__title">
+    <div class="container">
+      <div class="grid">
+        <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
+        <h2 class="title">Наши объекты</h2>
+      </div>
+    </div>
+  </div>
   <div class="objects-slider">
     <!-- TILE START-->
-    <div class="objects-tile grid">
-      <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
-      <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "На Сенной"</a>
+    <div class="objects-tile grid">          <a class="objects-tile__headline link--active" href="#">ЖК "На Сенной"</a>
       <p class="objects-tile__text">Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.</p>
       <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
           <div class="arrow-btn__icon">
@@ -50,9 +56,7 @@
     </div>
     <!--TILE END-->
     <!--TILE STRAT-->
-    <div class="objects-tile grid">
-      <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
-      <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "Остров"</a>
+    <div class="objects-tile grid"><a class="objects-tile__headline link--active" href="#">ЖК "Остров"</a>
       <p class="objects-tile__text">В центре города-курорта Миргород ведется строительство нового многоэтажного жилого дома по адресу ул. Гоголя, 77. Комплекс расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, мини-рынок, социальные службы города. На придомовой территории будут оборудованы детская площадка и автостоянка, произведено озеленение.</p>
       <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
           <div class="arrow-btn__icon">
@@ -93,9 +97,7 @@
     </div>
     <!--TILE END-->
     <!--TILE STRAT-->
-    <div class="objects-tile grid">
-      <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
-      <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "Мирного"</a>
+    <div class="objects-tile grid"><a class="objects-tile__headline link--active" href="#">ЖК "Мирного"</a>
       <p class="objects-tile__text">В центре города-курорта Миргород введен в эксплуатацию в мае 2017 года односекционного 10-этажного жилого по адресу ул. Панаса Мирного, 3. Расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, минирынок, социальные службы города. На придомовой территории оборудованы детская площадка и автостоянка, произведено озеленение.</p>
       <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
           <div class="arrow-btn__icon">
@@ -136,9 +138,7 @@
     </div>
     <!--TILE END-->
     <!--TILE STRAT-->
-    <div class="objects-tile grid">
-      <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
-      <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "Победы"</a>
+    <div class="objects-tile grid"><a class="objects-tile__headline link--active" href="#">ЖК "Победы"</a>
       <p class="objects-tile__text">Построен и введен в эксплуатацию новый 108-квартирный девятиэтажный кирпичный дом по адресу ул. Победы, 10 <br> Дом имеет очень удачное расположение:<br>— центр города;<br>— непосредственная близость школы, детского сада, магазина «Фуршет»;<br>— возле дома будут обустроены автостоянки, детские площадки;<br>— 10 минут спокойной ходьбы до курорта Миргород...</p>
       <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
           <div class="arrow-btn__icon">
