--- a/app/pug/layout/section-objects.pug
+++ b/app/pug/layout/section-objects.pug
@@ -3,11 +3,14 @@
     svg.objects-slider__icon
         use(xlink:href="images/main-page_icons-sprite.svg#arrow") 
     //SLIDER BUTTON END 
+    .objects__title
+        .container
+            .grid
+                h3.headline ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ
+                h2.title Наши объекты
     .objects-slider
         // TILE START
-        .objects-tile.grid
-            h3.headline ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ
-            h2.title Наши объекты
+        .objects-tile.grid           
             a.objects-tile__headline.link--active(href="#") ЖК "На Сенной"
             p.objects-tile__text Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.
             .objects-tile__links
@@ -41,8 +44,6 @@
         //TILE END
         //TILE STRAT
         .objects-tile.grid
-            h3.headline ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ
-            h2.title Наши объекты
             a.objects-tile__headline.link--active(href="#") ЖК "Остров"
             p.objects-tile__text В центре города-курорта Миргород ведется строительство нового многоэтажного жилого дома по адресу ул. Гоголя, 77. Комплекс расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, мини-рынок, социальные службы города. На придомовой территории будут оборудованы детская площадка и автостоянка, произведено озеленение.
 
@@ -76,9 +77,6 @@
         //TILE END
         //TILE STRAT
         .objects-tile.grid
-            
-            h3.headline ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ
-            h2.title Наши объекты
             a.objects-tile__headline.link--active(href="#") ЖК "Мирного"
             p.objects-tile__text В центре города-курорта Миргород введен в эксплуатацию в мае 2017 года односекционного 10-этажного жилого по адресу ул. Панаса Мирного, 3. Расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, минирынок, социальные службы города. На придомовой территории оборудованы детская площадка и автостоянка, произведено озеленение.
 
@@ -112,8 +110,6 @@
         //TILE END
         //TILE STRAT
         .objects-tile.grid
-            h3.headline ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ
-            h2.title Наши объекты
             a.objects-tile__headline.link--active(href="#") ЖК "Победы"
             p.objects-tile__text Построен и введен в эксплуатацию новый 108-квартирный девятиэтажный кирпичный дом по адресу ул. Победы, 10 <br> Дом имеет очень удачное расположение:<br>— центр города;<br>— непосредственная близость школы, детского сада, магазина «Фуршет»;<br>— возле дома будут обустроены автостоянки, детские площадки;<br>— 10 минут спокойной ходьбы до курорта Миргород...
             .objects-tile__links
