--- a/app/layout/sidebar.html
+++ b/app/layout/sidebar.html
@@ -32,9 +32,36 @@
     <li class="menu-item"><a href="#">Галерея</a></li>
     <li class="menu-item"><a href="#">Блог</a></li>
   </ul>
+  <!--MOBILE LANG-->
+  <div class="mobile-menu__lang"><a class="mobile-menu__link link--active" href="#">UA</a><a class="mobile-menu__link" href="#">RU</a></div>
+  <!--MOBILE LANG END-->
+  <!--MOBILE LOGO--><a class="mobile-logo" href="#">             
+    <svg class="mobile-logo__icon">
+      <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
+    </svg></a>
+  <!--MOBILE LOGO END-->
+  <div class="menu-info"><a class="menu-info__item" href="#">
+      <svg class="menu-info__icon">
+        <use xlink:href="images/main-page_icons-sprite.svg#apartament"></use>
+      </svg>
+      <div class="menu-info__text"> 
+        <p class="info-link">Выбрать квартиру</p>
+      </div></a><a class="menu-info__item" href="tel:+380506347178">
+      <svg class="menu-info__icon">
+        <use xlink:href="images/main-page_icons-sprite.svg#phone"></use>
+        <div class="menu-info__text"> 
+          <p>+38(050) 634 71 78</p>
+          <p class="link--active">Заказать звонок</p>
+        </div>
+      </svg></a></div>
   <ul class="menu-footer">
     <li class="menu-item"><a class="link--active" href="#">Выбрать квартиру</a></li>
     <li class="menu-item"><a href="tel:+38(050)-991-58-80">+38 (050) 991 58 80</a></li>
     <li class="menu-item"><a class="link--email" href="mailto:angrobud@gmail.com">angrobud@gmail.com</a></li>
   </ul>
+</div>
+<div class="mobile-menu">
+  <svg class="mobile-menu__icon">
+    <use xlink:href="images/main-page_icons-sprite.svg#menu icon"></use>
+  </svg>
 </div>
