--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -52,18 +52,16 @@ button::-moz-focus-inner {
     margin: 0 auto;
     padding: 0 10px;
     max-width: 1250px;
-    @media (max-width: 1367px) {
-        max-width: 960px;
-    }
     @media (max-width: 1366px) {
         max-width: 960px;
+    }
+    @media (max-width: 1200px) {
+        max-width: 880px;
     }
     @media (max-width: 1024px) {
         max-width: 766px;
     }
-    @media (max-width: 768px) {
-        max-width: 766px;
-    }
+    @media (max-width: 768px) {}
     @media (max-width: 576px) {
         width: 100%;
         padding: 0 20px;
