--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     padding: 100px 0 50px 0;
-    background: linear-gradient(90deg, rgba(0, 0, 0, .2), hsla(0, 0%, 100%, 0) 50%), linear-gradient(270deg, rgba(0, 0, 0, .2), hsla(0, 0%, 70%, 0) 47.55%);
+    background: linear-gradient(90deg, rgba(0, 0, 0, .1), hsla(0, 0%, 80%, 0) 40%), linear-gradient(270deg, rgba(0, 0, 0, .1), hsla(0, 0%, 50.2%, 0) 47.55%);
     color: #0D0D0D;
     overflow: hidden;
     @media (max-width: 576px) {
@@ -144,7 +144,7 @@
         &__icons {
             display: flex;
             justify-content: space-between;
-            padding: 0 1rem 1.25rem;
+            padding: 0 1rem 0.5rem;
         }
         &__link {
             &:hover {
@@ -164,6 +164,11 @@
             }
             svg {
                 @include size(35px);
+            }
+        }
+        @media (max-width: 1200px) {
+            &__icons {
+                padding: 0 0 0.5rem;
             }
         }
         @media (max-width: 576px) {
@@ -195,53 +200,54 @@
             margin-top: 30px;
         }
         &__form {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            height: 100%;
+            display: grid;
+            grid-template-columns: repeat(6, 1fr);
             @media (max-width: 576px) {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                height: 100%;
                 display: flex;
                 flex-direction: column;
             }
         }
-        &__text {
-            padding: 1rem 0 0 0;
-            display: flex;
-            justify-content: space-between;
-        }
         &__headline {
+            grid-column: 1 / 7;
+            grid-row: 1/2;
             text-transform: uppercase;
             font-size: 24px;
             line-height: 29px;
+            @media (max-width: 1366px) {
+                font-size: 18px;
+            }
             @media (max-width: 576px) {
                 margin: 0 0 30px 0;
                 text-align: center;
             }
         }
         &__title {
-            font-size: 1.1rem;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            flex-grow: 2;
+            grid-column: 1 / 3;
+            grid-row: 2/3;
+            font-size: 18px;
         }
         &__field {
+            grid-column: 1 / 4;
+            grid-row: 3/4;
             font-size: 1.1rem;
             background: transparent;
-            margin: .5rem .5rem 0 0;
-            padding: .1rem .5rem;
             line-height: 1.2rem;
             border-bottom: 1px solid #828282;
             padding: .1rem .5rem;
-            color: #828282;
+            color: #514947;
             @media (max-width: 576px) {
                 margin: 0 0 30px 0;
-                padding: .5rem .5rem;
+                padding: .5rem 0;
             }
         }
         &__btn {
+            grid-column: 4 / 7;
+            grid-row: 2/4;
             margin: 0 0 0 1rem;
-            width: 250px;
             height: 4rem;
             @media (max-width: 576px) {
                 font-size: 16px;
