--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -28,7 +28,7 @@
         font-size: 1.25rem;
         @media (max-width: 576px) {
             font-weight: normal;
-            font-size: 16px;
+            font-size: 18px;
             line-height: 20px;
             margin: 15px 0;
         }
@@ -63,12 +63,18 @@
         line-height: 1.2rem;
         background: transparent;
         border-bottom: 2px solid #ffffff;
-        padding: .1rem .5rem;
+        padding: .2rem 0;
         color: #ffffff;
     }
     &__checkbox {
         grid-column: 2 / 7;
         grid-row: 3 / 4;
+        @media (max-width: 1366px) {
+            grid-column: 2 / 8;
+        }
+        @media (max-width: 1200px) {
+            grid-column: 2 / 8;
+        }
         @media (max-width: 576px) {
             grid-column: 1 / 13;
             grid-row: 5 / 6;
@@ -106,10 +112,4 @@
         align-self: flex-end;
         text-transform: uppercase;
     }
-    // .submit {
-    //     font-size: 1.25rem;
-    //     color: #828282;
-    //     background: #FFF3A6;
-    //     font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
-    // }
 }
