--- a/app/scss/modules/_sidebar.scss
+++ b/app/scss/modules/_sidebar.scss
@@ -6,9 +6,6 @@
         mix-blend-mode: normal;
         background: rgba(0, 0, 0, 0);
         mix-blend-mode: difference;
-        @media (max-width: 576px) {
-            display: none;
-        }
         &-content {
             position: relative;
             display: flex;
@@ -23,6 +20,12 @@
             transition: all .3s;
             @media (max-width: 1366px) {
                 padding: 50px 40px 45vh;
+            }
+            @media (max-width: 1200px) {
+                padding: 50px 20px 45vh;
+            }
+            @media (max-width: 576px) {
+                display: none;
             }
         }
         &-logo {
@@ -88,12 +91,21 @@
             @include pos($b: 100px, $l: 70px);
             display: flex;
             flex-direction: column;
+            align-items: flex-end;
+            @media (max-width: 1200px) {
+                left: 60px;
+                bottom: 70px;
+            }
             &__icon {
                 width: 65px;
                 height: 60px;
                 fill: #ffffff;
                 transition: all .3s;
                 margin-bottom: 1em;
+                @media (max-width: 1200px) {
+                    width: 45px;
+                    height: 40px;
+                }
                 &:hover {
                     fill: $button-default-color;
                 }
@@ -123,6 +135,9 @@
         position: fixed;
         z-index: 3;
         background: $page-bg;
+        @media (max-width: 576px) {
+            width: 100%;
+        }
         &:after {
             content: '';
             @include pos($t: 0, $l: 40rem);
@@ -137,20 +152,38 @@
             padding: 1rem 0;
             font-size: 1.5rem;
             text-transform: uppercase;
+            @media (max-width: 576px) {
+                padding: 1.2rem;
+            }
         }
         &-top {
             @include pos($t: 7.5rem, $l: 17rem);
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            @media (max-width: 1200px) {
+                top: 5rem;
+            }
+            @media (max-width: 576px) {
+                top: 110px;
+                left: 50%;
+                transform: translateX(-50%);
+                text-align: center;
+                font-size: 24px;
+                line-height: 29px;
+            }
+            @media (max-width: 320px) {
+                font-size: 16px;
+                line-height: 20px;
+            }
         }
         &-footer {
             @include pos($b: 140px, $l: 17rem);
-            @media (max-width: 1024px) {
-                top: 30rem;
+            @media (max-width: 1200px) {
+                bottom: 85px;
             }
-            @media (max-width: 768) {
-                top: 30rem;
+            @media (max-width: 576px) {
+                display: none;
             }
             display: flex;
             flex-direction: column;
@@ -161,6 +194,54 @@
         }
         &--is-hide {
             display: none;
+        }
+        &-info {
+            display: none;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            @media (max-width: 576px) {
+                display: flex;
+                width: 100%;
+                @include pos($b: 40px, $l: 0);
+                //transform: translateY(-50%);
+            }
+            &__item {
+                display: flex;
+                //justify-content: space-around;
+                align-items: center;
+                color: #FFFFFF;
+                width: 77%;
+                font-size: 19px;
+                line-height: 23px;
+                text-transform: uppercase;
+                margin: 15px 0;
+                @media (max-width: 320px) {
+                    font-size: 16px;
+                    margin: 5px 0;
+                }
+            }
+            &__icon {
+                @include size(60px);
+                fill: #FFFFFF;
+                @media (max-width: 320px) {
+                    @include size(30px);
+                }
+            }
+            .link--active {
+                text-decoration: underline;
+                font-weight: 300;
+                text-transform: initial;
+            }
+            &__text {
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                padding: 0 0 0 2rem;
+                @media (max-width: 320px) {
+                    font-size: 14px;
+                }
+            }
         }
     }
     
@@ -177,3 +258,58 @@
     // @media (max-width: 768px) {
     //     font-size: 10px;
     // }
+    .mobile-menu {
+        display: none;
+        position: absolute;
+        justify-content: space-between;
+        top: 30px;
+        left: 30px;
+        z-index: 3;
+        &__icon {
+            @include size(55px);
+            fill: #FFFFFF;
+        }
+        @media (max-width: 576px) {
+            display: block;
+        }
+    }
+    
+    .mobile-menu__lang {
+        display: none;
+        font-size: 22px;
+        padding: 15px 0;
+        @include pos($t: 30px, $r: 30px);
+        @media (max-width: 576px) {
+            display: block;
+        }
+    }
+    
+    .mobile-menu__link {
+        padding: 0 7px;
+        position: relative;
+        &:first-child {
+            &:after {
+                content: '';
+                @include pos($t: 0, $r: -1.5px);
+                background: #FFFFFF;
+                @include size(2px, 26px);
+            }
+        }
+    }
+    
+    .mobile-logo {
+        display: none;
+        @include pos($t: 10px, $l: 50%);
+        transform: translateX(-50%);
+        &__icon {
+            @include size(70px, 85px);
+            fill: #FFFFFF;
+            transition: all .3s;
+            &:hover {
+                fill: #FFF3A6;
+            }
+        }
+        @media (max-width: 576px) {
+            display: block;
+        }
+    }
