--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -64,7 +64,7 @@
         background: transparent;
         border-bottom: 2px solid #ffffff;
         padding: .2rem 0;
-        color: #ffffff;
+        color: #FFFFFF;
     }
     &__checkbox {
         grid-column: 2 / 7;
